LU-4050 llite: NFS reexport issue

Suppress erroneous/confusing messages when NFS
is out of sync and requests old data.

Signed-off-by: Dmitry Eremin <dmitry.eremin@intel.com>
Change-Id: Idf382769fe3b5b502ca6f545fab6b72fcc62527c
Reviewed-on: http://review.whamcloud.com/7850
Tested-by: Hudson
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>